--- a/templates/posts/list.html
+++ b/templates/posts/list.html
@@ -6,8 +6,8 @@
         <div class="card mb-4 box-shadow">
           <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
           <div class="card-body">
-            <h4>{{ post.post_title }}</h4>
-            <p class="card-text">{{ post.post_text }}</p>
+            <h4>{{ post.title }}</h4>
+            <p class="card-text">{{ post.text }}</p>
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
                 <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
