--- a/templates/base.html
+++ b/templates/base.html
@@ -15,61 +15,34 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static "css/album.css" %}" rel="stylesheet">
+    <link href="{% static "css/carousel.css" %}" rel="stylesheet">
   </head>
 
   <body>
+   <header>
+    {% block navbar %}
+      {% include "navbar.html" %}
+    {% endblock %}
+   </header>
 
-    <header>
-      <div class="collapse bg-dark" id="navbarHeader">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-8 col-md-7 py-4">
-              <h4 class="text-white">About</h4>
-              <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
-            </div>
-            <div class="col-sm-4 offset-md-1 py-4">
-              <h4 class="text-white">Contact</h4>
-              <ul class="list-unstyled">
-                <li><a href="#" class="text-white">Follow on Twitter</a></li>
-                <li><a href="#" class="text-white">Like on Facebook</a></li>
-                <li><a href="#" class="text-white">Email me</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="navbar navbar-dark bg-dark box-shadow">
-        <div class="container d-flex justify-content-between">
-          <a href="#" class="navbar-brand d-flex align-items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
-            <strong>Spirifer</strong>
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        </div>
-      </div>
-    </header>
 
     <main role="main">
-    {% block jumbotron %}
-    {% endblock %}
 
-    <div class="album py-5 bg-light">
-      <div class="container">
-        {% block content %}{% endblock %}
+      {% block carousel %}
+      {% endblock %}
+
+      {% block jumbotron %}
+      {% endblock %}
+
+      <div class="album py-5 bg-light">
+        <div class="container">
+          {% block content %}{% endblock %}
+        </div>
       </div>
-    </div>
     </main>
 
     <footer class="text-muted">
-      <div class="container">
-        <p class="float-right">
-          <a href="#">Back to top</a>
-        </p>
-        <p>Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-        <p>New to Bootstrap? <a href="../../">Visit the homepage</a> or read our <a href="../../getting-started/">getting started guide</a>.</p>
-      </div>
+      {% include "footer.html" %}
     </footer>
 
     <!-- Bootstrap core JavaScript
