cosmetics: translations and cosmetics

--- a/templates/carousel.html
+++ b/templates/carousel.html
@@ -13,7 +13,7 @@
           <h1>Spotkanie pracowni już w tę środę.</h1>
           <p>Temat: Rozpoznawanie skamieniałości Jurajskich</p>
           <p>Lokalizacja: Liceum Hoffmanowej </p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+          <p><a class="btn btn-lg btn-primary" href="#" role="button">Zapisz się!</a></p>
         </div>
       </div>
     </div>
@@ -24,7 +24,7 @@
           <h1>Wyjazd do Dobrzynia nad Wisłą.</h1>
           <p>12.10.2019 godz. 8:30</p>
           <p>Miejsce zbiórki: Wydział Geologii UW</p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+          <p><a class="btn btn-lg btn-primary" href="#" role="button">Dowiedz się więcej</a></p>
         </div>
       </div>
     </div>
@@ -34,7 +34,7 @@
         <div class="carousel-caption text-right">
           <h1>Nowa galeria z wyjazdu na Syberię.</h1>
           <p>Zobacz jak produkuje się jubilerski chrom-diopsyt, poznaj opuszczone miasto "Nazwadan" i przeżyj z nami największą przygodę 2018 roku. </p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+          <p><a class="btn btn-lg btn-primary" href="#" role="button">Obejrzyj zdjęcia</a></p>
         </div>
       </div>
     </div>
