--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,14 +10,21 @@
       </button>
         <ul class="navbar-nav ml-auto"  style="margin-right: 6rem;">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Główna <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item ">
-            <a class="nav-link" href="#">Trips</a>
-          </li>
+
           <li class="nav-item">
-            <a class="nav-link" href="#">Other</a>
+            <a class="nav-link" href="#">O nas</a>
           </li>
+
+          <li class="nav-item ">
+            <a class="nav-link" href="#">Wyprawy</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">Galeria</a>
+          </li>
+
         </ul>
   </div>
     </nav>
